--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,137 @@
-এখানে আপনার ফেসবুক আইডির কুকি বসান ✅
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261582289587018%22%3A%22GjLe9L9a%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.285Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "datr",
+        "value": "j2n3aBC7PIx-PGAJHXbUscUp",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "sb",
+        "value": "j2n3aPrtLkTWDyML1dmdQRow",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x800",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61582289587018",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "xs",
+        "value": "50%3AtqRBnrUDp4yOzA%3A2%3A1761044902%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "pas",
+        "value": "61582289587018%3AYBLGRxoGvi",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B716x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "fr",
+        "value": "0knCFck3mqMvVLpML.AWdbSLeidAn_V304a7DeBkOANp0q-I7yfbyqEdaFXjcxFsDU_SI.Bo92mP..AAA.0.0.Bo922g.AWfcBjGirJdCBnyJ_DjyAk-yaY4",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2961%3Btimestamp%3A1761045920",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100620583%3BT%3A29350765",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-21T11:25:22.286Z",
+        "lastAccessed": "2025-10-21T11:25:22.286Z"
+    }
+]
